app/02_mw.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: testheader2
spec:
  headers:
    customRequestHeaders:
      X-Middleware2-Name: "test"
